# ptz-cam-tools

./: .gitignore  CHANGELOG.md  README.md  push_to_gitea.bat  push_to_gitea_fallback.bat
ptzcam-qt6/: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  HANDOVER.md  LICENSE  NOTICE  PTZ-Cam-Tools-debug.spec  PTZ-Cam-Tools.spec  README.md  TECH_HANDOVER.md  USB_CAMERA_DEV_PLAN.md  _dbg.spec  apply_fixes.py  build_exe.bat  fix_gitea_releases.py  main.cpp  main.py  main_backup.py  mainwindow.cpp  mainwindow.h  requirements.txt  run.bat  run_debug.bat  run_debug_console.bat  run_debug_usb.bat  runtime_hook_utf8.py  test_device_debug.py  test_formats_debug.py
ptzcam-qt6/app/: __init__.py  main_window.py
ptzcam-qt6/app/styles/: __init__.py  theme.py
ptzcam-qt6/app/tabs/: __init__.py  ndi_tab.py  onvif_tab.py  rtsp_tab.py  settings_tab.py  usb_tab.py  usb_tab_fix.py
ptzcam-qt6/app/utils/: __init__.py  constants.py  debug_overlay.py  device_manager.py  dshow_capture.py  i18n.py  logger.py  ndi_capture.py  ndi_sdk.py  network_utils.py  onvif_device.py  qt_capture.py  qt_usb_capture.py  rtsp_capture.py  visca_controller.py  visca_protocol.py  visca_transport.py
ptzcam-qt6/app/widgets/: __init__.py  control_card.py  help_card.py  preview.py  ptz_panel.py  visca_panel.py
ptzcam-qt6/docs/: UI控件命名参考.html  VISCA_PTZ开发踩坑记录.md  layout-v2-prototype.html  开发架构与重构记录.md  翻译对照表.md
ptzcam-qt6/tests/: __init__.py  test_constants.py  test_main_window.py
ptzcam-ui/: index.html
